styles.css
body {
    margin: 0;
}

.header {
    background-color: #1F2937;
    display: flex;
    justify-content: space-around;
    padding: 20px ;
}

.header-logo, .action-call {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

.header-right {
    display: flex;
    justify-content: space-around;
    gap: 30px;
}

.header-link, .heading-subtext, .action-call-subtext, .copyright {
    font-size: 18px;
    color: #E5E7EB;
}

.container {
    background-color: #1F2937;
    display: flex;
    justify-content: center;
    padding: 100px 0px;
    gap: 150px;
}

.left-items {
    display: flex;
    flex-direction: column;
    max-width: 500px;
    gap: 10px;
}

.heading-text {
    color: #F9FAF8;
    font-weight: bolder;
    font-size: 48px;
}

.sign-up {
    border-radius: 8px;
    background-color: #3882F6;
    align-self: flex-start;
    padding: 6px 24px;
    font-size: 16px;
    color: #F9FAF8;
    font-weight: bold;
    border-color: white;
}

.right-items {
    background-color: rgb(82, 80, 80);
    color: white;
    align-self: center;
    padding: 105px;
    margin-left: 135px;
}

.title {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    text-align: center;
    padding: 40px 0px;
}

.information {
    padding: 10px 0px 120px 0px;
}

.boxes {
    display: flex;
    justify-content: center;
    text-align: center;
    gap: 80px;
    flex-wrap: wrap;
}
.info {
    display: flex;
    flex-direction: column;
    gap: 10px;
    justify-content: center;
    align-items: center;
    padding-top: 20px;
}
.img {
    border: 5px solid #3882F6;
    border-radius: 16px; 
    width: 180px;
    height: 180px;
    object-fit: cover;
}
.text {
    max-width: 200px;
    text-align: center;
    font-size: 18px;
    color: #313131;
}

.quote-box {
    padding: 180px;
    background-color: #E5E7EB;
    font-size: 36px;
    display: flex;
    flex-direction: column;
    align-items: center;

}

.quote {
    max-width: 950px;
    font-style: italic;
}

.quotee {
    text-align: right;
    font-weight: bold;
    font-size: 24px;
    padding-left: 600px;
}
.call-box {
    padding: 0px 180px;
}
.blue-box {
    background-color:#3882F6;
    margin: 150px;
    display: flex;
    gap: 150px;
    padding: 50px 150px;
    justify-content: center;
    border-radius: 16px;
}

.copyright {
    padding: 50px;
    background-color: #1F2937;
    text-align: center;
}

